Resolves: fdo#87840 by default hide all feature checkboxes

and explicitly show the supported ones

Change-Id: I93d998472a82085da9bd5a8ec7ad4cb39998e198
(cherry picked from commit fef5c2b81d1ac7d64e01521da792f470b03a1841)
Reviewed-on: https://gerrit.libreoffice.org/13788
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>